# myspec

./: .markdownlint-cli2.jsonc  README.md  pyproject.toml
.github/workflows/: release.yml
.github/workflows/scripts/: create-release-packages.sh  generate-release-notes.sh  get-next-version.sh  update-version.sh
.myspec/context/: knowledge-pack.md  trace.json
.myspec/kb/: bm25_corpus.jsonl  chunks.jsonl  index.faiss  index_meta.json
.myspec/kb/raw/: domain-knowledge.md
agents/: architect_agent.md  blueprint_agent.md  chart-specialist.md  coder.md  database-architect.md  governance_agent.md  implement_agent.md  qa-engineer.md  specification_agent.md  tasks_agent.md  开题记录.md
context/: constitution.md
scripts/bash/: create-new-feature.sh  setup-blueprint.sh  setup-implement.sh  setup-plan.sh  setup-tasks.sh  submit-feature.sh  update-agent-context.sh
scripts/powershell/: create-new-feature.ps1  setup-blueprint.ps1  setup-implement.ps1  setup-plan.ps1  setup-tasks.ps1  submit-feature.ps1  update-agent-context.ps1
skills/project-knowledge/: SKILLS.md
skills/project-knowledge/references/: domain-knowledge.md
src/my_cli/: main.py
src/my_cli/kb/: bm25.py  chunker.py  cli.py  embedder.py  index.py  pack.py  paths.py  tokenizer.py
templates/: blueprint-template.md  constitution-template.md  plan-template.md  spec-template.md  tasks-template.md
templates/commands/: blueprint.md  constitution.md  implement.md  plan.md  specify.md  submit.md  tasks.md
